add winmove, submode

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
 	url = http://github.com/msanders/snipmate.vim.git
+[submodule "bundle/vim-submode"]
+	path = bundle/vim-submode
+	url = http://github.com/kana/vim-submode.git
